# orbi_exporter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  prometheus.yaml  pyproject.toml
.github/workflows/: on_push_main.yaml  on_push_tag.yaml
manifests/: kustomization.yaml
manifests/base/: deployment.yaml  service.yaml
orbi_exporter/: server.py
